# CodeReviewAI

./: .coverage  README.md  docker-compose.yml  pyproject.toml
code_review_ai/: main.py
code_review_ai/models/: request.py
code_review_ai/routes/: review.py
code_review_ai/services/: ai_client.py  github_client.py  redis_client.py  review_service.py
code_review_ai/utils/: logger.py
tests/: test_routes.py
